--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  max-width: 800px;
+  margin: auto;
+}
+
+h1 {
+  text-align: center;
+  padding: 2rem;
+  padding-bottom: 0;
+}
+
+form {
+  padding: 1rem;
+}
+
+form input {
+  width: 100%;
+  outline: none;
+  border: none;
+  background-color: #a19d9d;
+  color: #fff;
+  padding: .5rem 1.5rem;
+  border-radius: 20px;
+}
+
+form input::placeholder {
+  color: #fff;
+}
+
+table, td, th {
+  border: 1px solid;
+  text-align: center;
+  padding: .4rem 0;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table tr th:last-child {
+  width: 20%;
+}
+
+tbody {
+  background-color: #c7c7c7;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #ffffff;
 }
